Change jdbc url

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   datasurce:
-    url: jdbc:postgresql://fka-postgres.postgres.database.azure.com:5432
+    url: jdbc:postgresql://localhost:5432
     username: username
     password: <secret>
